--- a/RMW/Web.config
+++ b/RMW/Web.config
@@ -50,13 +50,13 @@
     <membership defaultProvider="CodeFirstMembershipProvider">
       <providers>
         <clear />
-        <add name="CodeFirstMembershipProvider" type="RMW.CodeFirstMembershipProvider" connectionStringName="RMWContext" />
+        <add name="CodeFirstMembershipProvider" type="RMW.Membership.CodeFirstMembershipProvider" connectionStringName="RMWContext" />
       </providers>
     </membership>
     <roleManager enabled="true" defaultProvider="CodeFirstRoleProvider">
       <providers>
         <clear />
-        <add name="CodeFirstRoleProvider" type="RMW.CodeFirstRoleProvider" connectionStringName="RMWContext" />
+        <add name="CodeFirstRoleProvider" type="RMW.Membership.CodeFirstRoleProvider" connectionStringName="RMWContext" />
       </providers>
     </roleManager>
   </system.web>
@@ -95,7 +95,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
 
