--- a/RMW/packages.config
+++ b/RMW/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="ckeditor3" version="3.6.5" targetFramework="net45" />
   <package id="CodeFirstMembershipProviderSharp" version="1.0.0" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.3.1.13153" targetFramework="net45" />
@@ -35,5 +36,5 @@
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="T4Scaffolding" version="1.0.8" targetFramework="net45" />
   <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net45" />
-  <package id="WebGrease" version="1.3.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
