--- a/RMW/Web.config
+++ b/RMW/Web.config
@@ -70,6 +70,25 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <rewrite>
+      <rules>
+
+        <rule name="RedirectToWWW" stopProcessing="true">
+          <match url=".*" ignoreCase="true" />
+          <conditions>
+            <add input="{HTTP_HOST}" pattern="^www\.ryanmichaelwilliams\.com$" />
+          </conditions>
+          <action type="Redirect" url="http://ryanmichaelwilliams.com/{R:0}" redirectType="Permanent" />
+        </rule>
+
+        <rule name="LowerCaseRule1" stopProcessing="true">
+          <match url="[A-Z]" ignoreCase="false" />
+          <action type="Redirect" url="{ToLower:{URL}}" />
+        </rule>
+
+      </rules>
+    </rewrite>
+
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
