--- a/RMW/Web.config
+++ b/RMW/Web.config
@@ -14,10 +14,11 @@
       <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
     </sectionGroup>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"></section>
+    <section name="web.optimization" type="Web.Optimization.Configuration.OptimizationSection" />
   </configSections>
   <connectionStrings>
     <clear />
-    <add name="RMWContext" connectionString="Data Source=W_LAPTOP-PC;Initial Catalog=RMW.Models.RMWContext;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="RMWContext" connectionString="LOCAL_CONNECTION_STRING" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -72,7 +73,6 @@
     </handlers>
     <rewrite>
       <rules>
-
         <rule name="RedirectToWWW" stopProcessing="true">
           <match url=".*" ignoreCase="true" />
           <conditions>
@@ -80,15 +80,12 @@
           </conditions>
           <action type="Redirect" url="http://ryanmichaelwilliams.com/{R:0}" redirectType="Permanent" />
         </rule>
-
         <rule name="LowerCaseRule1" stopProcessing="true">
           <match url="[A-Z]" ignoreCase="false" />
           <action type="Redirect" url="{ToLower:{URL}}" />
         </rule>
-
       </rules>
     </rewrite>
-
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -114,11 +111,9 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
-
-
     <!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
 		     to MVC 3 so libraries such as DotNetOpenAuth that compile against MVC 1 will work with it.
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -203,7 +198,7 @@
     <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
       <bufferSize value="1" />
       <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      <connectionString value="Data Source=W_TOP-PC\SQLEXPRESS;Initial Catalog=RMW.Models.RMWContext;Integrated Security=True" />
+      <connectionString value="LOCAL_CONNECTION_STRING" />
       <commandText value="up_AddLog4Net @log_date, @thread, @log_level, @logger, @message, @exception, @location" />
       <parameter>
         <parameterName value="@log_date" />
@@ -265,4 +260,27 @@
       <appender-ref ref="AdoNetAppender" />
     </root>
   </log4net>
+  <web.optimization>
+    <bundles>
+      <bundle virtualPath="~/Content/sample" transform="System.Web.Optimization.JsMinify, System.Web.Optimization">
+        <content>
+          <!-- Add some single files -->
+          <!-- <add path="~/Scripts/validation.js" /> -->
+          <!-- <add path="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.2.min.js" /> -->
+          <!-- Add a directory (and its subdirectories) -->
+          <!-- <add path="~/Scripts/Plugins" searchPattern="*.js" searchSubdirectories="true" /> -->
+        </content>
+        <!--
+        If you want to apply multiple transformations, 
+        you should remove the "transform" attribute from the bundle. 
+        -->
+        <!--
+        <transformations>
+          <add type="Web.Optimization.Bundles.CoffeeScript.CoffeeScriptTransform, Web.Optimization.Bundles.CoffeeScript" />
+          <add type="System.Web.Optimization.JsMinify, System.Web.Optimization" />
+        </transformations>
+        -->
+      </bundle>
+    </bundles>
+  </web.optimization>
 </configuration>
