--- a/RMW/packages.config
+++ b/RMW/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="ckeditor3" version="3.6.5" targetFramework="net45" />
   <package id="CodeFirstMembershipProviderSharp" version="1.0.0" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.3.1.13153" targetFramework="net45" />
@@ -16,7 +15,7 @@
   <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.30506.0" targetFramework="net45" />
@@ -33,8 +32,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="MvcScaffolding" version="1.0.9" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="T4Scaffolding" version="1.0.8" targetFramework="net45" />
   <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net45" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="Web.Optimization" version="0.0.7" targetFramework="net45" />
+  <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
