--- a/RMW/RMW.csproj
+++ b/RMW/RMW.csproj
@@ -664,6 +664,7 @@
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Scripts\_references.js" />
     <Content Include="Images\accent.png" />
