--- a/RMW.Repository/RMW.Repository.csproj
+++ b/RMW.Repository/RMW.Repository.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EB4CDC20-F632-4B15-B9FC-BA51C78E1EA1}</ProjectGuid>
+    <ProjectGuid>{9D23256A-BCF3-4EBA-AD79-E1005A2F8828}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RMW.Models</RootNamespace>
-    <AssemblyName>RMW.Models</AssemblyName>
+    <RootNamespace>RMW.Repository</RootNamespace>
+    <AssemblyName>RMW.Repository</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -38,11 +38,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.0.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Build.Framework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,15 +48,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountModels.cs" />
-    <Compile Include="Article.cs" />
-    <Compile Include="Comment.cs" />
-    <Compile Include="PagedResult.cs" />
-    <Compile Include="Log4Net.cs" />
-    <Compile Include="RMWContext.cs" />
+    <Compile Include="ArticleRepository.cs" />
+    <Compile Include="CommentRepository.cs" />
+    <Compile Include="Log4NetRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Role.cs" />
-    <Compile Include="User.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RMW.Models\RMW.Models.csproj">
+      <Project>{eb4cdc20-f632-4b15-b9fc-ba51c78e1ea1}</Project>
+      <Name>RMW.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
