--- a/RMW.Tests/packages.config
+++ b/RMW.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FakeItEasy" version="1.13.1" targetFramework="net45" />
+  <package id="Glimpse" version="1.8.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-beta2" targetFramework="net45" />
