--- a/RMW.Web/Web.config
+++ b/RMW.Web/Web.config
@@ -16,10 +16,10 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"></section>
     <section name="web.optimization" type="Web.Optimization.Configuration.OptimizationSection" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+  <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
     <clear />
-    <add name="RMWContext" connectionString="DATABASE_CONNECTION" providerName="System.Data.SqlClient" />
+    <add name="RMWContext" connectionString="CONNECTION_STRING" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -61,7 +61,12 @@
         <add name="CodeFirstRoleProvider" type="RMW.Membership.CodeFirstRoleProvider" connectionStringName="RMWContext" />
       </providers>
     </roleManager>
-  </system.web>
+  <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
+            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
+        </httpModules><httpHandlers>
+            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
+        </httpHandlers></system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <rewrite>
@@ -79,7 +84,11 @@
         </rule>
       </rules>
     </rewrite>
-  </system.webServer>
+  <modules>
+            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
+        </modules><handlers>
+            <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
+        </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -103,9 +112,8 @@
         <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages.Razor"
-            publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.WebPages.Razor" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
@@ -180,7 +188,7 @@
     <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
       <bufferSize value="1" />
       <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      <connectionString value="DATABASE_CONNECTION" />
+      <connectionString value="CONNECTION_STRING" />
       <commandText value="up_AddLog4Net @log_date, @thread, @log_level, @logger, @message, @exception, @location" />
       <parameter>
         <parameterName value="@log_date" />
@@ -237,9 +245,10 @@
       </parameter>
     </appender>
     <root>
-      <level value="INFO" />
+      <level value="ALL" />
       <!--<appender-ref ref="RollingFileAppender" />-->
       <appender-ref ref="AdoNetAppender" />
+      <appender-ref ref="GlimpseAppender" />
     </root>
   </log4net>
   <web.optimization>
@@ -265,4 +274,14 @@
       </bundle>
     </bundles>
   </web.optimization>
-</configuration>
+<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+      <!-- If you are having issues with Glimpse, please include this. It will help us figure out whats going on. 
+      -->
+      <logging level="Trace" />
+      <!-- Want to use Glimpse on a remote server? Ignore the LocalPolicy by removing this comment.
+      <runtimePolicies>
+        <ignoredTypes>
+          <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet"/>
+        </ignoredTypes>
+      </runtimePolicies>-->
+    </glimpse></configuration>
