--- a/RMW.Tests/RMW.Web.UnitTests.csproj
+++ b/RMW.Tests/RMW.Web.UnitTests.csproj
@@ -100,8 +100,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ArticlesControllerTest.cs" />
+    <Compile Include="Controllers\ContactControllerTests.cs" />
+    <Compile Include="Controllers\ResumeControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Controllers\HomeControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
