--- a/RMW.Web/RMW.Web.csproj
+++ b/RMW.Web/RMW.Web.csproj
@@ -203,6 +203,7 @@
     <Content Include="Content\img\check.png" />
     <Content Include="Content\img\check_2.png" />
     <Content Include="Content\img\favicon.ico" />
+    <Content Include="Content\img\fb_og.jpg" />
     <Content Include="Content\img\logos\gplus-64.png" />
     <Content Include="Content\img\logos\li.png" />
     <Content Include="Content\img\logos\pdf.jpg" />
