--- a/RMW.Web/Web.config
+++ b/RMW.Web/Web.config
@@ -20,7 +20,7 @@
   </configSections>
   <connectionStrings>
     <clear/>
-    <add name="RMWContext" connectionString="CONNECTION_STRING" providerName="System.Data.SqlClient"/>
+        <add name="RMWContext" connectionString="CONNECTION_STRING" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0"/>
@@ -72,33 +72,28 @@
     </roleManager>
   </system.web>
   <system.webServer>
- 
-    
     <rewrite>
       <rules>
         <rule name="RedirectWWW" stopProcessing="true">
-          <match url=".*" ignoreCase="true" />
+          <match url=".*" ignoreCase="true"/>
           <conditions>
-            <add input="{HTTP_HOST}" pattern="^www\.ryanwilliams\.io$" />
+            <add input="{HTTP_HOST}" pattern="^www\.ryanwilliams\.io$"/>
           </conditions>
-          <action type="Redirect" url="http://ryanwilliams.com/{R:0}" redirectType="Permanent" />
+          <action type="Redirect" url="http://ryanwilliams.io/{R:0}" redirectType="Permanent"/>
         </rule>
         <rule name="LowerCaseRule1" stopProcessing="true">
-          <match url="[A-Z]" ignoreCase="false" />
-          <action type="Redirect" url="{ToLower:{URL}}" />
+          <match url="[A-Z]" ignoreCase="false"/>
+          <action type="Redirect" url="{ToLower:{URL}}"/>
         </rule>
-
         <rule name="redirect" enabled="true">
-          <match url="(.*)" />
+          <match url="(.*)"/>
           <conditions>
-            <add input="{HTTP_HOST}" negate="true" pattern="^ryanwilliams.io" />
+            <add input="{HTTP_HOST}" negate="true" pattern="^ryanwilliams.io"/>
           </conditions>
-          <action type="Redirect" url="http://ryanwilliams.io/{R:0}" appendQueryString="true" redirectType="Permanent" />
+          <action type="Redirect" url="http://ryanwilliams.io/{R:0}" appendQueryString="true" redirectType="Permanent"/>
         </rule>
       </rules>
     </rewrite>
-    
-    
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
