--- a/src/DevLog.Data/DevLog.Data.csproj
+++ b/src/DevLog.Data/DevLog.Data.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RuntimeFrameworkVersion>2.0.3</RuntimeFrameworkVersion>
+
   </PropertyGroup>
 
   <ItemGroup>
